validation-flow/validation-flow-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: validation-flow-service
  namespace: validation-flow
spec:
  selector:
    app.kubernetes.io/instance: validation-flow-validation-flow-migration
  ports:
    - name: mpgw
      protocol: TCP
      port: 8001
      targetPort: 8001
